--- a/first-app/package.json
+++ b/first-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://heart44.github.io/2022-React",
+  "homepage": "https://heart44.github.io/2022-React/",
   "name": "first-app",
   "version": "0.1.0",
   "private": true,
